--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# PROJECT .GITIGNORE
+# Database files
+files/
+
+
+# PYTHON .GITIGNORE
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
